# answer-app

./: CLAUDE.md  pyproject.toml
docs/development/: version-management.md
scripts/: bootstrap.sh
terraform/main/: backend.tf  main.tf  terraform.tf
terraform/modules/answer-app/: iam.tf  terraform.tf  variables.tf
